# PIPC

./: .gitignore  README.md
src/mpc/: CMakeLists.txt  package.xml
src/mpc/config/: test_mpc.yaml
src/mpc/include/mpc/: mpc.h
src/mpc/launch/: test_mpc.launch
src/mpc/src/: mpc.cpp
src/mpc/test/: test_mpc.cpp
src/obstacles_prediction/: CMakeLists.txt  package.xml
src/obstacles_prediction/include/obstacles_prediction/: obstacles_prediction.h
src/obstacles_prediction/launch/: test_obstacles_prediction.launch
src/obstacles_prediction/rviz/: test.rviz
src/obstacles_prediction/src/: obstacles_prediction.cpp
src/obstacles_prediction/test/: test_obstacles_prediction.cpp
src/path_search/: CMakeLists.txt  package.xml
src/path_search/config/: test_dwa.yaml
src/path_search/include/astar/: astar.h
src/path_search/include/dwa/: dwa.h
src/path_search/include/kinodynamic_astar/: kinodynamic_astar.h
src/path_search/include/node/: node.h
src/path_search/include/util/: tools.hpp
src/path_search/launch/: test_astar.launch  test_dwa.launch  test_kino_astar.launch
src/path_search/rviz/: test_astar.rviz  test_dwa.rviz  test_kino_astar.rviz
src/path_search/src/astar/: astar.cpp
src/path_search/src/dwa/: dwa.cpp
src/path_search/src/kinodynamic_astar/: kinodynamic_astar.cpp
src/path_search/src/node/: node.cpp
src/path_search/test/: test_astar.cpp  test_dwa.cpp  test_kino_astar.cpp
src/pipc/: CMakeLists.txt  package.xml
src/pipc/config/: experiment.yaml  gazebo_simulation.yaml  param.yaml  simulation.yaml
src/pipc/include/pipc/: pipc.h
src/pipc/include/polytope/: ellipsoid.hpp  emvp.hpp  geo_utils.hpp  line_segment.hpp  polytope.hpp  sdlp.hpp
src/pipc/launch/: departed_simulator.launch  experiment.launch  gazebo_simulation.launch  map.launch  pipc.launch  rviz.launch  simulation.launch
src/pipc/rviz/: default.rviz  experiment.rviz  simulation.rviz
src/pipc/src/: pipc.cpp  pipc_node.cpp
src/plan_env/: CMakeLists.txt
src/plan_env/include/plan_env/: grid_map.h
src/plan_env/launch/: plan_env.launch
src/plan_env/src/: grid_map.cpp  grid_map_node.cpp
src/pointcloud_processor/: CMakeLists.txt  package.xml
src/pointcloud_processor/config/: pointcloud_processor.yaml
src/pointcloud_processor/include/pointcloud_processor/: pointcloud_processor.h
src/pointcloud_processor/launch/: pointcloud_processor.launch  test_pointcloud_processor.launch
src/pointcloud_processor/rviz/: test.rviz
src/pointcloud_processor/src/: pointcloud_processor.cpp  pointcloud_processor_node.cpp
src/pointcloud_processor/test/: test_pointcloud_processor.cpp
src/utils/benchmarking/: CMakeLists.txt  package.xml
src/utils/benchmarking/include/benchmarking/: benchmarking.h
src/utils/benchmarking/launch/: benchmarking.launch
src/utils/benchmarking/src/: benchmarking.cpp  benchmarking_node.cpp
src/utils/gazebo_to_object/: CMakeLists.txt  package.xml
src/utils/gazebo_to_object/launch/: gazebo_to_object.launch
src/utils/gazebo_to_object/src/: gazebo_to_object_node.cpp
src/utils/object_msgs/: CMakeLists.txt  package.xml
src/utils/object_msgs/msg/: MultiObstacleBoxMsg.msg  ObstacleBoxMsg.msg
src/utils/odom_to_object/: CMakeLists.txt  package.xml
src/utils/odom_to_object/src/: odom_to_object_node.cpp
src/utils/virtual_map/: CMakeLists.txt  package.xml
src/utils/virtual_map/include/virtual_map/: virtual_map.h
src/utils/virtual_map/launch/: virtual_map.launch
src/utils/virtual_map/rviz/: virtual_map.rviz
src/utils/virtual_map/src/: virtual_map.cpp  virtual_map_node.cpp
